k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xambook-backend
  namespace: default

spec:
  replicas: 2

  selector:
    matchLabels:
      app: xambook-backend

  template:
    metadata:
      labels:
        app: xambook-backend

    spec:
      containers:
        - name: backend
          image: harishsudalaimani/xambook-backend:6f5aad659357aa7cc7a5b83cca2fbdbacb456741
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
