k8s/backend/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: xambook-backend
  namespace: default

spec:
  selector:
    app: xambook-backend

  ports:
    - port: 80
      targetPort: 8080
