k8s/backend/route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: default

spec:
  parentRefs:
    - name: shared-gateway
      namespace: default

  hostnames:
    - api.xambook.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: xambook-backend
          port: 80
